[package]
name = "dx_use_js_bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = "0.7.0-alpha.3"
dioxus-signals = "0.7.0-alpha.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.21.3"
uuid = { version = "1.8", optional = true }
chrono = { version = "0.4", features = ["serde"] }

# Web dependencies that are enabled via the "web" feature.
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", optional = true }
js-sys = { version = "0.3", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
gloo-utils = "0.2"

[target.'cfg(target_os = "android")'.dependencies]
libc = "0.2"
jni = "0.21.1"

[target.'cfg(not(any(target_arch = "wasm32", target_os = "android")))'.dependencies]
dioxus-desktop = "0.7.0-alpha.3"

[features]
default = []
web = ["wasm-bindgen", "web-sys", "js-sys", "serde-wasm-bindgen"]
android = []
uuid = ["dep:uuid"]

[lib]
crate-type = ["cdylib", "rlib"]