[package]
name = "dx_use_js_bridge"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
dioxus = { version = "0.7.0-alpha.3", default-features = false }
dioxus-signals = { version = "0.7.0-alpha.3", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.21.3"
uuid = { version = "1.8", optional = true }
chrono = { version = "0.4", features = ["serde"], default-features = false }

# Web dependencies that are enabled via the "web" feature.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }
web-sys = { version = "0.3" }
js-sys = { version = "0.3" }
serde-wasm-bindgen = { version = "0.6" }
gloo-utils = { version = "0.2", default-features = false }

[target.'cfg(target_os = "android")'.dependencies]
libc = "0.2"
jni = "0.21.1"

[target.'cfg(not(any(target_arch = "wasm32", target_os = "android")))'.dependencies]
dioxus-desktop = { version = "0.7.0-alpha.3", default-features = false }

[features]
default = ["uuid"]
web = []
android = []
uuid = ["dep:uuid"]
